fix quote spacing

--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -271,6 +271,10 @@ footer {
     padding-top: 5rem;
 }
 
+#noPadding {
+    padding-top: 1rem;
+}
+
 /* Small screens (phones) */
 @media screen and (max-width: 600px) {
     
